feat: add recent files, session restore, and improve search documentation